--- a/index.html
+++ b/index.html
@@ -14,10 +14,105 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script> 
 
-      <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
+
+    <script src="https://kit.fontawesome.com/6fb24b4b6a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+	<footer>
+        <section
+          class="d-flex flex-column border-bottom pb-2 justify-content-start flex-md-row justify-content-md-between align-items-md-end">
+        
+          <div class="d-flex flex-column flex-md-row">
+            <a class="mb-1" href="#"><img src="img/footer.JPG" alt="footer"></a>
+            <p class="d-inline mb-0 footer-color fs-7 align-self-md-end ps-md-4">
+              © 2021 NEWSWEEK DIGITAL LLC
+            </p>
+          </div>
+  
+          <ul class="list-inline mb-0 blue-hover">
+            <li class="list-inline-item fs-4">
+				<a href="#"> <i class="footer-color fab fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item fs-4">
+              <a href="#"><i class="footer-color fab fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item fs-4">
+              <a href="#"><i class="footer-color fab fa-instagram"></i></a>
+            </li>
+            <li class="list-inline-item fs-4">
+              <a href="#"><i class="footer-color fab fa-tumblr-square"></i></a>
+            </li>
+            <li class="list-inline-item fs-4">
+              <a href="#"><i class="footer-color fab fa-linkedin"></i></a>
+            </li>
+          </ul>
+        </section>
+  
+        <section class="d-flex flex-row pt-2">
+          <strong class="footer-color me-1">Editions:</strong>
+          <ul class="black-hover p-0 mb-0">
+            <li class="list-inline-item border-end m-0">
+              <a class="footer-color px-2" href="#">U.S Edition</a>
+            </li>
+            <li class="list-inline-item border-end m-0">
+              <a class="footer-color px-2" href="#">日本</a>
+            </li>
+            <li class="list-inline-item border-end m-0">
+              <a class="footer-color px-2" href="#">Pakistan</a>
+            </li>
+            <li class="list-inline-item border-end m-0">
+              <a class="footer-color px-2" href="#">Polska</a>
+            </li>
+            <li class="list-inline-item">
+              <a class="footer-color px-2" href="#">România</a>
+            </li>
+          </ul>
+        </section>
+  
+        <section class="mt-0">
+          <ul class="black-hover list-inline">
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">About US</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Corrections</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Contact Us</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Editorial Guidelines</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Advertise</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Copyright</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Terms & Conditions</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Privacy Policy</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Cookie Policy</a>
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Terms of Sale</a >
+            </li>
+            <li class="list-inline-item mt-1 border-end m-0">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Archieve</a>
+            </li>
+            <li class="list-inline-item mt-1">
+              <a href="#" class="footer-color pe-2 px-md-0 pe-md-2">Announcements</a>
+            </li>
+          </ul>
+        </section>
+      </footer>
 </body>
 
 </html>
